--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #19a7eb;
-		  font-family: "Helvetica,Arial,FreeSans";
+  		background-color: #fff;
+		  font-family: "Lucida Sans,Arial,Helvetica,FreeSans";
   		color: #000000;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #e65814; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #666; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #e65814; }
-    h3 { text-align: center; color: #e65814; }
+		h2 { font-size: 1.5em; color: #666; }
+    h3 { text-align: center; color: #666; }
     a { color: #e65814; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
